# tdd-ratchet-rs

./: .test-status.json  AGENTS.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  PLAN.md  README.md  VISION.md
.config/: nextest.toml
.github/workflows/: ci.yml  release.yml
.opencode/: opencode.json
docs/: CNAME  index.html
docs/schema/: test-status.v1.json
src/: errors.rs  history.rs  lib.rs  main.rs  ratchet.rs  runner.rs  status.rs
tests/: bypass_prevention.rs  demo_passing.rs  demo_pending.rs  end_to_end.rs  error_messages.rs  gatekeeper.rs  git_history.rs  report_messages.rs  state_transitions.rs  status_file.rs  test_runner.rs
tests/common/: mod.rs
